--- a/css/georgian.css
+++ b/css/georgian.css
@@ -29,9 +29,7 @@
   scroll-behavior: smooth;
 
 }
-body{
-  overflow-x: hidden;
-}
+
 *:focus {
   outline: none;
   border: none;
@@ -80,9 +78,9 @@ body{
 
 }
 .nav a{
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 800;
-  font-family: 'ZooeySolid';
+  font-family: 'acadnusxur';
   text-decoration: none;
   color: black;
   padding: 10px 1px;
@@ -113,7 +111,7 @@ nav a:hover{
   left:30%;
   
 }
-.textblock-h1, .textblock-h2, .middle-text-h2{
+.textblock-h1, .textblock-h2{
   font-weight: bold;
   font-family: 'Indie Flower';
   text-decoration: none;
@@ -139,15 +137,23 @@ nav a:hover{
   display: flex;
   justify-content: center;
   padding-top: 30px;
+  width: 100%;
+  background-color: white;
+  
 }
 .middle-text-h2{
-  padding-right: 0px;
-  padding-left: 0px;
-  font-size: 90px;
-}
-#geo, #eng{
-  width: 50px;
-  height: auto;
+  font-size: 70px;
+  font-weight: 700;
+  font-family: 'kolxeti';
+  text-decoration: none;
+  color: black;
+  padding: 10px 1px;
+  margin-left: 10px;
+  border-bottom: 3px solid transparent;
+  -webkit-transition: 500ms;
+  -o-transition: 500ms;
+  transition: 500ms;
+
 }
 /* navigation ends */
 /* header ends */
@@ -318,6 +324,7 @@ background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
 .bear-wrapper{
   display: flex;
   justify-content: center;
+  
   padding-top: 45px;
 }
 .bear-div{
