--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,37 @@
-@media (max-width: 600px) {
+@media (max-width: 768px) {
+   .navigation{
+    display: none;
+   }
+   .burger-icon{
+    display: block;
+    font-size: 30px;
+   }
+   .bear-div{
+    display: flex;
+    flex-direction: column;
+   }
+   .about-me-div{
+    flex-direction: column;
+   }
+  .section1{
+    display: flex;
+    justify-content: center;
+  }
+  .middle-section-devider, .middle-section-devider-2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .slideshow-container{
+    margin: 0 auto;
+  }
+  .donkey-contaner{
+    padding-left: 160px;
+  }
+  .next-donkey{
+    left: 68%;
+
+  }
   .footer-distributed .footer-left, .footer-distributed .footer-right {
     text-align: center;
   }
